--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Aniket Mankar"
 title_separator          : "-"
 name                     : &name "Aniket Mankar"
-description              : &description "personal description"
+description              : &description "Recent Grad"
 url                      : https://aniketbmankar.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "aniketbmankar/aniketbmankar.github.io"
@@ -25,7 +25,7 @@ author:
   name             : "Aniket Mankar"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
+  location         : "Dallas, TX"
   employer         : "Red Brick University"
   uri              : # URL
   email            : "none@example.org" 
